--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,13 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.houses {
+  color: green;
+  margin: 20px;
+}
+
+.house-image {
+  height: 100px;
+  width: 100px;
+}
